--- a/public/index.html
+++ b/public/index.html
@@ -215,7 +215,7 @@
 </span></span><span class="line"><span class="cl">
 </span></span><span class="line"><span class="cl">　／|、
 </span></span><span class="line"><span class="cl">（ﾟ､ ｡ ７　
-</span></span><span class="line"><span class="cl">　|、 ~ヽ　 .　~ Meow ♥
+</span></span><span class="line"><span class="cl">　|、 ~ヽ　 .　~ Meow ♡
 </span></span><span class="line"><span class="cl">　じし|_,)ノ
 </span></span><span class="line"><span class="cl">
 </span></span><span class="line"><span class="cl">
